--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2>Welcome!</h2>
 
 		        <div>
-                <div style = background-color:darkgoldenrod>
+                <div style = background-color:rgb(123, 230, 238)>
 
               <a href="https://atomicobject.com" target="_blank">
                 <img src="./site-assets/AO_logo.png" alt="Atomic Object" width="280px" height="280px"/>
